Fix FinaliseModal styling, using correct button class and z-index

--- a/democrachat-frontend/css/components/modal.css
+++ b/democrachat-frontend/css/components/modal.css
@@ -1,5 +1,6 @@
 .modal__wrapper {
     position: absolute;
+    z-index: 999;
     left: 0;
     top: 0;
     background: rgba(0, 0, 0, 0.9);
